cloud-formation/stack/main.json
{
  "AWSTemplateFormatVersion":"2010-09-09",
  "Description":"Base AWS Resources for CRM app.",
  "Metadata":{
    "AWS::CloudFormation::Interface":{
      "ParameterGroups":[
        {"Label":{"default":"Common Configuration"},"Parameters":["ENV"]},
        {"Label":{"default":"Amazon EC2 Configuration"},"Parameters":["EC2KeyPair"]},
        {"Label":{"default":"Amazon S3 Configuration"},"Parameters":["S3BucketPrefix"]}
      ],
      "ParameterLabels":{
        "ENV":{"default":"Which environment should this CRM app be deployed to?"},
        "EC2KeyPair":{"default":"Select SSH key pair name"},
        "S3BucketPrefix":{"default":"Enter a prefix for S3 app static bucket"}
      }
    }
  },
  "Parameters":{
    "ENV":{
      "Type":"String",
      "Default":"prd",
      "AllowedValues":["prd","stg"],
      "ConstraintDescription":"must specify prd, or stg"
    },
    "EC2KeyPair":{
      "Type":"AWS::EC2::KeyPair::KeyName",
      "Description":"Name of an existing EC2 KeyPair to enable SSH access to the CRM app servers"
    },
    "S3BucketPrefix":{
      "Type":"String",
      "ConstraintDescription":"must begin with a letter and contain only alphanumeric characters"
    }
  },
  "Conditions":{
    "CheckENV":{"Fn::Equals":[{"Ref":"ENV"},"prd"]}
  },
  "Resources":{
    "IAMEC2RL":{
      "Type":"AWS::IAM::Role",
      "Condition":"CheckENV",
      "DependsOn":["S3AppSTTBKT"],
      "Properties":{
        "AssumeRolePolicyDocument":{
          "Version":"2012-10-17",
          "Statement":[
            {
              "Effect":"Allow",
              "Principal":{
                "Service":"ec2.amazonaws.com"
              },
              "Action":"sts:AssumeRole"
            }
          ]
        },
        "ManagedPolicyArns":[
          "arn:aws:iam::aws:policy/AmazonS3FullAccess"
        ],
        "Path":"/",
        "RoleName":{"Fn::Join":["",[{"Ref":"ENV"},"-iam-ec2-rl"]]},
        "Tags":[
          {"Key":"Name","Value":{"Fn::Join":["",[{"Ref":"ENV"},"-iam-ec2-rl"]]}},
          {"Key":"Environment","Value":{"Ref":"ENV"}},
          {"Key":"Region","Value":{"Ref":"AWS::Region"}},
          {"Key":"Product","Value":"crm"}
        ]
      }
    },
    "IAMEC2RLINSTPF":{
      "Type":"AWS::IAM::InstanceProfile",
      "Condition":"CheckENV",
      "DependsOn":["IAMEC2RL"],
      "Properties":{
        "InstanceProfileName":{"Fn::Join":["",[{"Ref":"ENV"},"-iam-ec2-rl-inst-pf"]]},
        "Path":"/",
        "Roles":[{"Ref":"IAMEC2RL"}]
      }
    },
    "VPCNET":{
      "Type":"AWS::EC2::VPC",
      "Condition":"CheckENV",
      "Properties":{
        "CidrBlock":{"Fn::If":["CheckENV","11.1.0.0/16","12.1.0.0/16"]},
        "EnableDnsSupport":true,
        "EnableDnsHostnames":true,
        "InstanceTenancy":"default",
        "Tags":[
          {"Key":"Name","Value":{"Fn::Join":["",[{"Ref":"ENV"},"-vpc-net"]]}},
          {"Key":"Environment","Value":{"Ref":"ENV"}},
          {"Key":"Region","Value":{"Ref":"AWS::Region"}},
          {"Key":"Product","Value":"crm"}
        ]
      }
    },
    "VPCIG":{
      "Type":"AWS::EC2::InternetGateway",
      "Condition":"CheckENV",
      "DependsOn":["VPCNET"],
      "Properties":{
        "Tags":[
          {"Key":"Name","Value":{"Fn::Join":["",[{"Ref":"ENV"},"-vpc-ig"]]}},
          {"Key":"Environment","Value":{"Ref":"ENV"}},
          {"Key":"Region","Value":{"Ref":"AWS::Region"}},
          {"Key":"Product","Value":"crm"}
        ]
      }
    },
    "VPCIGATH":{
      "Type":"AWS::EC2::VPCGatewayAttachment",
      "Condition":"CheckENV",
      "DependsOn":["VPCNET","VPCIG"],
      "Properties":{
        "VpcId":{"Ref":"VPCNET"},
        "InternetGatewayId":{"Ref":"VPCIG"}
      }
    },
    "VPCPUBRTT":{
      "Type":"AWS::EC2::RouteTable",
      "Condition":"CheckENV",
      "DependsOn":["VPCNET"],
      "Properties":{
        "VpcId":{"Ref":"VPCNET"},
        "Tags":[
          {"Key":"Name","Value":{"Fn::Join":["",[{"Ref":"ENV"},"-vpc-pub-rtt"]]}},
          {"Key":"Environment","Value":{"Ref":"ENV"}},
          {"Key":"Region","Value":{"Ref":"AWS::Region"}},
          {"Key":"Product","Value":"crm"}
        ]
      }
    },
    "VPCPUBRTTRT1":{
      "Type":"AWS::EC2::Route",
      "Condition":"CheckENV",
      "DependsOn":["VPCNET","VPCIG","VPCIGATH","VPCPUBRTT"],
      "Properties":{
        "RouteTableId":{"Ref":"VPCPUBRTT"},
        "DestinationCidrBlock":"0.0.0.0/0",
        "GatewayId":{"Ref":"VPCIG"}
      }
    },
    "VPCPVTRTT":{
      "Type":"AWS::EC2::RouteTable",
      "Condition":"CheckENV",
      "DependsOn":["VPCNET"],
      "Properties":{
        "VpcId":{"Ref":"VPCNET"},
        "Tags":[
          {"Key":"Name","Value":{"Fn::Join":["",[{"Ref":"ENV"},"-vpc-pvt-rtt"]]}},
          {"Key":"Environment","Value":{"Ref":"ENV"}},
          {"Key":"Region","Value":{"Ref":"AWS::Region"}},
          {"Key":"Product","Value":"crm"}
        ]
      }
    },
    "VPCPVTRTTRT1":{
      "Type":"AWS::EC2::Route",
      "Condition":"CheckENV",
      "DependsOn":["VPCNET","VPCPVTRTT","EC2NATSR1"],
      "Properties":{
        "RouteTableId":{"Ref":"VPCPVTRTT"},
        "DestinationCidrBlock":"0.0.0.0/0",
        "InstanceId":{"Ref":"EC2NATSR1"}
      }
    },
    "VPCS3EP":{
      "Type":"AWS::EC2::VPCEndpoint",
      "Condition":"CheckENV",
      "DependsOn":["VPCNET","VPCPUBRTT","VPCPVTRTT"],
      "Properties":{
        "RouteTableIds":[{"Ref":"VPCPUBRTT"},{"Ref":"VPCPVTRTT"}],
        "ServiceName":{"Fn::Join":["",["com.amazonaws.",{"Ref":"AWS::Region"},".s3"]]},
        "VpcEndpointType":"Gateway",
        "VpcId":{"Ref":"VPCNET"}
      }
    },
    "VPCAppSN1":{
      "Type":"AWS::EC2::Subnet",
      "Condition":"CheckENV",
      "DependsOn":["VPCNET"],
      "Properties":{
        "VpcId":{"Ref":"VPCNET"},
        "CidrBlock":{"Fn::If":["CheckENV","11.1.1.0/24","12.1.1.0/24"]},
        "AvailabilityZone":{"Fn::Join":["",[{"Ref":"AWS::Region"},"a"]]},
        "Tags":[
          {"Key":"Name","Value":{"Fn::Join":["",[{"Ref":"ENV"},"-vpc-app-sn-1"]]}},
          {"Key":"Environment","Value":{"Ref":"ENV"}},
          {"Key":"Region","Value":{"Ref":"AWS::Region"}},
          {"Key":"Product","Value":"crm"}
        ]
      }
    },
    "VPCAppSN1RTTASS":{
      "Type":"AWS::EC2::SubnetRouteTableAssociation",
      "Condition":"CheckENV",
      "DependsOn":["VPCAppSN1","VPCPVTRTT"],
      "Properties":{
        "RouteTableId":{"Ref":"VPCPVTRTT"},
        "SubnetId":{"Ref":"VPCAppSN1"}
      }
    },
    "VPCAppSN2":{
      "Type":"AWS::EC2::Subnet",
      "Condition":"CheckENV",
      "DependsOn":["VPCNET"],
      "Properties":{
        "VpcId":{"Ref":"VPCNET"},
        "CidrBlock":{"Fn::If":["CheckENV","11.1.2.0/24","12.1.2.0/24"]},
        "AvailabilityZone":{"Fn::Join":["",[{"Ref":"AWS::Region"},"b"]]},
        "Tags":[
          {"Key":"Name","Value":{"Fn::Join":["",[{"Ref":"ENV"},"-vpc-app-sn-2"]]}},
          {"Key":"Environment","Value":{"Ref":"ENV"}},
          {"Key":"Region","Value":{"Ref":"AWS::Region"}},
          {"Key":"Product","Value":"crm"}
        ]
      }
    },
    "VPCAppSN2RTTASS":{
      "Type":"AWS::EC2::SubnetRouteTableAssociation",
      "Condition":"CheckENV",
      "DependsOn":["VPCAppSN2","VPCPVTRTT"],
      "Properties":{
        "RouteTableId":{"Ref":"VPCPVTRTT"},
        "SubnetId":{"Ref":"VPCAppSN2"}
      }
    },
    "VPCRedisSN1":{
      "Type":"AWS::EC2::Subnet",
      "Condition":"CheckENV",
      "DependsOn":["VPCNET"],
      "Properties":{
        "VpcId":{"Ref":"VPCNET"},
        "CidrBlock":{"Fn::If":["CheckENV","11.1.3.0/24","12.1.3.0/24"]},
        "AvailabilityZone":{"Fn::Join":["",[{"Ref":"AWS::Region"},"a"]]},
        "Tags":[
          {"Key":"Name","Value":{"Fn::Join":["",[{"Ref":"ENV"},"-vpc-redis-sn-1"]]}},
          {"Key":"Environment","Value":{"Ref":"ENV"}},
          {"Key":"Region","Value":{"Ref":"AWS::Region"}},
          {"Key":"Product","Value":"crm"}
        ]
      }
    },
    "VPCRedisSN1RTTASS":{
      "Type":"AWS::EC2::SubnetRouteTableAssociation",
      "Condition":"CheckENV",
      "DependsOn":["VPCRedisSN1","VPCPVTRTT"],
      "Properties":{
        "RouteTableId":{"Ref":"VPCPVTRTT"},
        "SubnetId":{"Ref":"VPCRedisSN1"}
      }
    },
    "VPCRedisSN2":{
      "Type":"AWS::EC2::Subnet",
      "Condition":"CheckENV",
      "DependsOn":["VPCNET"],
      "Properties":{
        "VpcId":{"Ref":"VPCNET"},
        "CidrBlock":{"Fn::If":["CheckENV","11.1.4.0/24","12.1.4.0/24"]},
        "AvailabilityZone":{"Fn::Join":["",[{"Ref":"AWS::Region"},"b"]]},
        "Tags":[
          {"Key":"Name","Value":{"Fn::Join":["",[{"Ref":"ENV"},"-vpc-redis-sn-2"]]}},
          {"Key":"Environment","Value":{"Ref":"ENV"}},
          {"Key":"Region","Value":{"Ref":"AWS::Region"}},
          {"Key":"Product","Value":"crm"}
        ]
      }
    },
    "VPCRedisSN2RTTASS":{
      "Type":"AWS::EC2::SubnetRouteTableAssociation",
      "Condition":"CheckENV",
      "DependsOn":["VPCRedisSN2","VPCPVTRTT"],
      "Properties":{
        "RouteTableId":{"Ref":"VPCPVTRTT"},
        "SubnetId":{"Ref":"VPCRedisSN2"}
      }
    },
    "VPCNATSN1":{
      "Type":"AWS::EC2::Subnet",
      "Condition":"CheckENV",
      "DependsOn":["VPCNET"],
      "Properties":{
        "VpcId":{"Ref":"VPCNET"},
        "CidrBlock":{"Fn::If":["CheckENV","11.1.5.0/24","12.1.5.0/24"]},
        "AvailabilityZone":{"Fn::Join":["",[{"Ref":"AWS::Region"},"a"]]},
        "Tags":[
          {"Key":"Name","Value":{"Fn::Join":["",[{"Ref":"ENV"},"-vpc-nat-sn-1"]]}},
          {"Key":"Environment","Value":{"Ref":"ENV"}},
          {"Key":"Region","Value":{"Ref":"AWS::Region"}},
          {"Key":"Product","Value":"crm"}
        ]
      }
    },
    "VPCNATSN1RTTASS":{
      "Type":"AWS::EC2::SubnetRouteTableAssociation",
      "Condition":"CheckENV",
      "DependsOn":["VPCNATSN1","VPCPUBRTT"],
      "Properties":{
        "RouteTableId":{"Ref":"VPCPUBRTT"},
        "SubnetId":{"Ref":"VPCNATSN1"}
      }
    },
    "VPCNATSN2":{
      "Type":"AWS::EC2::Subnet",
      "Condition":"CheckENV",
      "DependsOn":["VPCNET"],
      "Properties":{
        "VpcId":{"Ref":"VPCNET"},
        "CidrBlock":{"Fn::If":["CheckENV","11.1.6.0/24","12.1.6.0/24"]},
        "AvailabilityZone":{"Fn::Join":["",[{"Ref":"AWS::Region"},"b"]]},
        "Tags":[
          {"Key":"Name","Value":{"Fn::Join":["",[{"Ref":"ENV"},"-vpc-nat-sn-2"]]}},
          {"Key":"Environment","Value":{"Ref":"ENV"}},
          {"Key":"Region","Value":{"Ref":"AWS::Region"}},
          {"Key":"Product","Value":"crm"}
        ]
      }
    },
    "VPCNATSN2RTTASS":{
      "Type":"AWS::EC2::SubnetRouteTableAssociation",
      "Condition":"CheckENV",
      "DependsOn":["VPCNATSN2","VPCPUBRTT"],
      "Properties":{
        "RouteTableId":{"Ref":"VPCPUBRTT"},
        "SubnetId":{"Ref":"VPCNATSN2"}
      }
    },
    "VPCLoadBalancerSN1":{
      "Type":"AWS::EC2::Subnet",
      "Condition":"CheckENV",
      "DependsOn":["VPCNET"],
      "Properties":{
        "VpcId":{"Ref":"VPCNET"},
        "CidrBlock":{"Fn::If":["CheckENV","11.1.7.0/24","12.1.7.0/24"]},
        "AvailabilityZone":{"Fn::Join":["",[{"Ref":"AWS::Region"},"a"]]},
        "Tags":[
          {"Key":"Name","Value":{"Fn::Join":["",[{"Ref":"ENV"},"-vpc-loadbalancer-sn-1"]]}},
          {"Key":"Environment","Value":{"Ref":"ENV"}},
          {"Key":"Region","Value":{"Ref":"AWS::Region"}},
          {"Key":"Product","Value":"crm"}
        ]
      }
    },
    "VPCLoadBalancerSN1RTTASS":{
      "Type":"AWS::EC2::SubnetRouteTableAssociation",
      "Condition":"CheckENV",
      "DependsOn":["VPCLoadBalancerSN1","VPCPUBRTT"],
      "Properties":{
        "RouteTableId":{"Ref":"VPCPUBRTT"},
        "SubnetId":{"Ref":"VPCLoadBalancerSN1"}
      }
    },
    "VPCLoadBalancerSN2":{
      "Type":"AWS::EC2::Subnet",
      "Condition":"CheckENV",
      "DependsOn":["VPCNET"],
      "Properties":{
        "VpcId":{"Ref":"VPCNET"},
        "CidrBlock":{"Fn::If":["CheckENV","11.1.8.0/24","12.1.8.0/24"]},
        "AvailabilityZone":{"Fn::Join":["",[{"Ref":"AWS::Region"},"b"]]},
        "Tags":[
          {"Key":"Name","Value":{"Fn::Join":["",[{"Ref":"ENV"},"-vpc-loadbalancer-sn-2"]]}},
          {"Key":"Environment","Value":{"Ref":"ENV"}},
          {"Key":"Region","Value":{"Ref":"AWS::Region"}},
          {"Key":"Product","Value":"crm"}
        ]
      }
    },
    "VPCLoadBalancerSN2RTTASS":{
      "Type":"AWS::EC2::SubnetRouteTableAssociation",
      "Condition":"CheckENV",
      "DependsOn":["VPCLoadBalancerSN2","VPCPUBRTT"],
      "Properties":{
        "RouteTableId":{"Ref":"VPCPUBRTT"},
        "SubnetId":{"Ref":"VPCLoadBalancerSN2"}
      }
    },
    "VPCAppSG":{
      "Type":"AWS::EC2::SecurityGroup",
      "Condition":"CheckENV",
      "DependsOn":["VPCNET","VPCLoadBalancerSG","VPCNATSG"],
      "Properties":{
        "VpcId":{"Ref":"VPCNET"},
        "GroupDescription":"VPC App Security Group.",
        "GroupName":{"Fn::Join":["",[{"Ref":"ENV"},"-vpc-app-sg"]]},
        "SecurityGroupIngress":[
          {"IpProtocol":"tcp","FromPort":22,"ToPort":22,"SourceSecurityGroupId":{"Ref":"VPCNATSG"}},
          {"IpProtocol":"tcp","FromPort":5000,"ToPort":5000,"SourceSecurityGroupId":{"Ref":"VPCLoadBalancerSG"}}
        ],
        "SecurityGroupEgress":[
          {"IpProtocol":"-1","CidrIp":"0.0.0.0/0"}
        ],
        "Tags":[
          {"Key":"Name","Value":{"Fn::Join":["",[{"Ref":"ENV"},"-vpc-app-sg"]]}},
          {"Key":"Environment","Value":{"Ref":"ENV"}},
          {"Key":"Region","Value":{"Ref":"AWS::Region"}},
          {"Key":"Product","Value":"crm"}
        ]
      }
    },
    "VPCRedisSG":{
      "Type":"AWS::EC2::SecurityGroup",
      "Condition":"CheckENV",
      "DependsOn":["VPCNET","VPCAppSG","VPCNATSG"],
      "Properties":{
        "VpcId":{"Ref":"VPCNET"},
        "GroupDescription":"VPC Redis Security Group.",
        "GroupName":{"Fn::Join":["",[{"Ref":"ENV"},"-vpc-redis-sg"]]},
        "SecurityGroupIngress":[
          {"IpProtocol":"tcp","FromPort":22,"ToPort":22,"SourceSecurityGroupId":{"Ref":"VPCNATSG"}},
          {"IpProtocol":"tcp","FromPort":6379,"ToPort":6379,"SourceSecurityGroupId":{"Ref":"VPCAppSG"}}
        ],
        "SecurityGroupEgress":[
          {"IpProtocol":"-1","CidrIp":"0.0.0.0/0"}
        ],
        "Tags":[
          {"Key":"Name","Value":{"Fn::Join":["",[{"Ref":"ENV"},"-vpc-redis-sg"]]}},
          {"Key":"Environment","Value":{"Ref":"ENV"}},
          {"Key":"Region","Value":{"Ref":"AWS::Region"}},
          {"Key":"Product","Value":"crm"}
        ]
      }
    },
    "VPCNATSG":{
      "Type":"AWS::EC2::SecurityGroup",
      "Condition":"CheckENV",
      "DependsOn":["VPCNET"],
      "Properties":{
        "VpcId":{"Ref":"VPCNET"},
        "GroupDescription":"VPC NAT Security Group.",
        "GroupName":{"Fn::Join":["",[{"Ref":"ENV"},"-vpc-nat-sg"]]},
        "SecurityGroupIngress":[
          {"IpProtocol":"-1","CidrIp":"11.1.0.0/16"},
          {"IpProtocol":"tcp","FromPort":22,"ToPort":22,"CidrIp":"0.0.0.0/0"}
        ],
        "SecurityGroupEgress":[
          {"IpProtocol":"-1","CidrIp":"0.0.0.0/0"}
        ],
        "Tags":[
          {"Key":"Name","Value":{"Fn::Join":["",[{"Ref":"ENV"},"-vpc-nat-sg"]]}},
          {"Key":"Environment","Value":{"Ref":"ENV"}},
          {"Key":"Region","Value":{"Ref":"AWS::Region"}},
          {"Key":"Product","Value":"crm"}
        ] 
      }
    },
    "VPCLoadBalancerSG":{
      "Type":"AWS::EC2::SecurityGroup",
      "Condition":"CheckENV",
      "DependsOn":["VPCNET"],
      "Properties":{
        "VpcId":{"Ref":"VPCNET"},
        "GroupDescription":"VPC LB Security Group.",
        "GroupName":{"Fn::Join":["",[{"Ref":"ENV"},"-vpc-loadbalancer-sg"]]},
        "SecurityGroupIngress":[
          {"IpProtocol":"tcp","FromPort":80,"ToPort":80,"CidrIp":"0.0.0.0/0"}
        ],
        "SecurityGroupEgress":[
          {"IpProtocol":"-1","CidrIp":"0.0.0.0/0"}
        ],
        "Tags":[
          {"Key":"Name","Value":{"Fn::Join":["",[{"Ref":"ENV"},"-vpc-loadbalancer-sg"]]}},
          {"Key":"Environment","Value":{"Ref":"ENV"}},
          {"Key":"Region","Value":{"Ref":"AWS::Region"}},
          {"Key":"Product","Value":"crm"}
        ]
      }
    },
    "S3AppSTTBKT":{
      "Type":"AWS::S3::Bucket",
      "Condition":"CheckENV",
      "Properties":{
        "AccessControl":"Private",
        "BucketEncryption":{
          "ServerSideEncryptionConfiguration":[
            {"ServerSideEncryptionByDefault":{"SSEAlgorithm":"AES256"}}
          ]
        },
        "BucketName":{"Fn::Join":["-",[{"Ref":"S3BucketPrefix"},{"Ref":"ENV"},"s3-app-stt-bkt"]]},
        "PublicAccessBlockConfiguration":{
          "BlockPublicAcls":true,
          "BlockPublicPolicy":true,
          "IgnorePublicAcls":true,
          "RestrictPublicBuckets":true
        },
        "CorsConfiguration":{
          "CorsRules":[
            {
              "Id":001,
              "AllowedOrigins":["*"],
              "AllowedMethods":["GET","HEAD"],
              "AllowedHeaders":["*"],
              "ExposedHeaders":[],
              "MaxAge":86400
            }
          ]
        },
        "Tags":[
          {"Key":"Name","Value":{"Fn::Join":["-",[{"Ref":"S3BucketPrefix"},{"Ref":"ENV"},"s3-app-stt-bkt"]]}},
          {"Key":"Environment","Value":{"Ref":"ENV"}},
          {"Key":"Region","Value":{"Ref":"AWS::Region"}},
          {"Key":"Product","Value":"crm"}
        ]
      }
    },
    "S3AppSTTBKTPLCY":{
      "Type":"AWS::S3::BucketPolicy",
      "Condition":"CheckENV",
      "DependsOn":["S3AppSTTBKT","CloudFrontAppOAI"],
      "Properties":{
        "Bucket":{"Ref":"S3AppSTTBKT"},
        "PolicyDocument":{
          "Statement":[
            {
              "Sid":001,
              "Effect":"Allow",
              "Principal":{
                "CanonicalUser":{"Fn::GetAtt": ["CloudFrontAppOAI","S3CanonicalUserId"]}
              },
              "Action":["s3:GetObject"],
              "Resource":{"Fn::Join":["",["arn:aws:s3:::",{"Fn::Join":["-",[{"Ref":"S3BucketPrefix"},{"Ref":"ENV"},"s3-app-stt-bkt"]]},"/*"]]}
            }
          ]
        }
      }
    },
    "CloudFrontAppOAI":{
      "Type":"AWS::CloudFront::CloudFrontOriginAccessIdentity",
      "Condition":"CheckENV",
      "Properties":{
        "CloudFrontOriginAccessIdentityConfig":{
          "Comment":"CloudFront App Origin Access Identity."
        }
      }
    },
    "CloudFrontAppSTTDST":{
      "Type":"AWS::CloudFront::Distribution",
      "Condition":"CheckENV",
      "DependsOn":["S3AppSTTBKT","CloudFrontAppOAI"],
      "Properties":{
        "DistributionConfig":{
          "Comment":"CloudFront Static Distribution.",
          "Origins":[
            {
              "DomainName":{"Fn::Join":["-",[{"Ref":"S3BucketPrefix"},{"Ref":"ENV"},"s3-stt-bkt.s3.amazonaws.com"]]},
              "Id":{"Fn::Join":["-",["S3",{"Ref":"S3AppSTTBKT"}]]},
              "S3OriginConfig":{
                "OriginAccessIdentity":{
                  "Fn::Join":["/",["origin-access-identity","cloudfront",{"Ref":"CloudFrontAppOAI"}]]
                }
              }
            }
          ],
          "DefaultCacheBehavior":{
            "AllowedMethods":["GET","HEAD"],
            "CachedMethods":["GET","HEAD"],
            "Compress":false,
            "DefaultTTL":86400,
            "MaxTTL" :31536000,
            "MinTTL":0,
            "SmoothStreaming":false,
            "TargetOriginId":{"Fn::Join":["-",["S3",{"Ref":"S3AppSTTBKT"}]]},
            "ViewerProtocolPolicy":"allow-all",
            "ForwardedValues":{
              "QueryString":false,
              "Cookies":{"Forward":"none"},
              "Headers":["Origin","Access-Control-Request-Headers","Access-Control-Request-Method"]
            }
          },
          "Enabled":true,
          "HttpVersion":"http2",
          "IPV6Enabled":false,
          "PriceClass":"PriceClass_All"
        },
        "Tags":[
          {"Key":"Name","Value":{"Fn::Join":["",[{"Ref":"ENV"},"-cloud-front-app-stt-dst"]]}},
          {"Key":"Environment","Value":{"Ref":"ENV"}},
          {"Key":"Region","Value":{"Ref":"AWS::Region"}},
          {"Key":"Product","Value":"crm"}
        ]
      }
    },
    "EC2NATSR1":{
      "Type":"AWS::EC2::Instance",
      "Condition":"CheckENV",
      "DependsOn":["IAMEC2RLINSTPF","VPCNET","VPCNATSN2","VPCNATSG"],
      "Properties":{
        "AvailabilityZone":{"Fn::Join":["",[{"Ref":"AWS::Region"},"b"]]},
        "CreditSpecification":{"CPUCredits":"standard"},
        "DisableApiTermination":false,
        "EbsOptimized":false,
        "IamInstanceProfile":{"Ref":"IAMEC2RLINSTPF"},
        "ImageId":"ami-0a4bc8a5c1ed3b5a3",
        "InstanceInitiatedShutdownBehavior":"stop",
        "InstanceType":"t3a.micro",
        "KeyName":{"Ref":"EC2KeyPair"},
        "NetworkInterfaces":[{
          "AssociatePublicIpAddress":true,
          "DeleteOnTermination":true,
          "DeviceIndex":"0",
          "GroupSet":[{"Ref":"VPCNATSG"}],
          "SubnetId":{"Ref":"VPCNATSN2"},
          "PrivateIpAddress":"11.1.6.10"
        }],
        "SourceDestCheck":false,
        "Tenancy":"default",
        "Tags":[
          {"Key":"Name","Value":{"Fn::Join":["",[{"Ref":"ENV"},"-vpc-nat-sr-1"]]}},
          {"Key":"Environment","Value":{"Ref":"ENV"}},
          {"Key":"Region","Value":{"Ref":"AWS::Region"}},
          {"Key":"Product","Value":"crm"}
        ]
      }
    },
    "EC2AppTG":{
      "Type":"AWS::ElasticLoadBalancingV2::TargetGroup",
      "Condition":"CheckENV",
      "DependsOn":["VPCNET"],
      "Properties":{
        "Name":{"Fn::Join":["",[{"Ref":"ENV"},"-ec2-app-tg"]]},
        "Port":5000,
        "Protocol":"HTTP",
        "TargetType":"instance",
        "UnhealthyThresholdCount":3,
        "VpcId":{"Ref":"VPCNET"},
        "HealthCheckEnabled":true,
        "HealthCheckIntervalSeconds":30,
        "HealthCheckPath":"/Health",
        "HealthCheckPort":"5000",
        "HealthCheckProtocol":"HTTP",
        "HealthCheckTimeoutSeconds":10,
        "HealthyThresholdCount":3,
        "Tags" : [
          {"Key":"Name","Value":{"Fn::Join":["",[{"Ref":"ENV"},"-ec2-app-tg"]]}},
          {"Key":"Environment","Value":{"Ref":"ENV"}},
          {"Key":"Region","Value":{"Ref":"AWS::Region"}},
          {"Key":"Product","Value":"crm"}
        ]
      }
    }
  },
  "Outputs":{
    "CloudFrontAppSTTDSTDomain":{
      "Value":{"Fn::GetAtt":["CloudFrontAppSTTDST","DomainName"]}
    }
  }
}
